Bug 101004 - Crash in: sd::FuPresentationLayout::DoExecute(SfxRequest &)
Summary: Crash in: sd::FuPresentationLayout::DoExecute(SfxRequest &)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-19 09:37 UTC by Adolfo Jayme Barrientos
Modified: 2016-10-06 14:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["sd::FuPresentationLayout::DoExecute(SfxRequest &)"]


Attachments
backtrace (6.80 KB, text/plain)
2016-07-28 11:46 UTC, JoNi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adolfo Jayme Barrientos 2016-07-19 09:37:18 UTC
This bug was filed from the crash reporting server and is br-db381584-581f-4453-86c1-c20de36bc408.
=========================================

Right-click a slide > Slide Features > Slide Master Design; got crash. Could reproduce only once, though.
Comment 1 JoNi 2016-07-27 23:23:03 UTC
could reproduce it tree times
once like in comment 0
the others via menu or right click a slide in slides area on the left and selecting Slide Master Design.
had to try several times too

Crash IDs:
fc2229f4-18fe-4b3e-a414-938b0366364d
5e28342f-4f32-4756-b96b-3f34c34505fd
c5f21020-351e-4096-8f54-25ee697c1813
Comment 2 JoNi 2016-07-28 11:46:07 UTC
Created attachment 126446 [details]
backtrace

added backtrace on linux with dev build of 2016/07/27.
assert because no page is selected
Comment 3 Caolán McNamara 2016-09-30 12:43:52 UTC
You have to be in master view for this slide master design to assert/crash, click somewhere in the main window to unselect a slide and then try it
Comment 4 Commit Notification 2016-09-30 13:45:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43e241541eefd21cfc7a8e8f51ef958c2a7ba4d7

Resolves: tdf#101004 crash on using slide master design from master view

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-10-06 14:39:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=40affcbad618c02f06e8ec2ba031dda187fcd950&h=libreoffice-5-2

Resolves: tdf#101004 crash on using slide master design from master view

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.