Resolves: tdf#101004 crash on using slide master design from master view

started asserting since...

commit f7ed8b99b628625851fb28ec1a3dead710c8871c
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 23 16:54:52 2015 +0100

    allow slide design to affect multiple standard pages

but looks broken well before that

Change-Id: I03988696e7a25e4f8c932f55bcd1879994ac1005